--- a/src/org/myjerry/myweb/views/AnalyticsView.mxml
+++ b/src/org/myjerry/myweb/views/AnalyticsView.mxml
@@ -9,13 +9,46 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
+	<fx:Script>
+		<![CDATA[
+			import org.myjerry.myweb.ApplicationContext;
+			import org.myjerry.myweb.model.Site;
+			
+			[Bindable]
+			private var googleAnalyticsID:String;
+			
+			override protected function initializationComplete():void {
+				super.initializationComplete();
+				
+				this.googleAnalyticsID = ApplicationContext.site.getSitePreference(Site.GOOGLE_ANALYTICS);
+			}
+			
+			protected function save():void {
+				// google analytics
+				var id:String = this.googleAnalytics.text;
+				ApplicationContext.site.saveSitePreference(Site.GOOGLE_ANALYTICS, id);
+				
+			}
+		]]>
+	</fx:Script>
+	
+	<s:layout>
+		<s:VerticalLayout />
+	</s:layout>
+	
 	<s:Form width="100%" height="100%">
 		<s:FormHeading label="Configure Site Analytics" />
 		
 		<s:FormItem label="Google Analytics Web Property ID" >
-			<s:TextInput id="googleAnalyticsID" />
+			<s:TextInput id="googleAnalytics" text="{this.googleAnalyticsID}" />
 		</s:FormItem>
 		
 	</s:Form>
+	
+	<s:HGroup width="100%">
+		<s:Spacer width="100%" />
+		
+		<s:Button label="Save" click="save()" />
+	</s:HGroup>
 	
 </s:NavigatorContent>
