--- a/src/org/myjerry/myweb/views/PagesView.mxml
+++ b/src/org/myjerry/myweb/views/PagesView.mxml
@@ -16,8 +16,6 @@
 			import org.myjerry.myweb.ApplicationContext;
 			import org.myjerry.myweb.model.Page;
 			
-			protected const pages:ArrayList = new ArrayList();
-			
 			override protected function initializationComplete():void {
 				super.initializationComplete();
 				
@@ -30,8 +28,8 @@
 			
 			protected function loadAllPages():void {
 				var temp:ArrayList = ApplicationContext.pageService.getAllPages();
-				pages.removeAll();
-				pages.addAll(temp);
+				ApplicationContext.site.pages.removeAll();
+				ApplicationContext.site.pages.addAll(temp);
 			}
 			
 			protected function editPage():void {
@@ -65,6 +63,10 @@
 				
 				return String(item);
 			}
+			
+			protected function previewPage():void {
+				
+			}
 		]]>
 	</fx:Script>
 	
@@ -72,18 +74,18 @@
 		<s:VerticalLayout />
 	</s:layout>
 	
-	<s:List width="100%" height="100%" id="pageList" dataProvider="{this.pages}" labelFunction="getPageLabel" />
+	<s:List width="100%" height="100%" id="pageList" dataProvider="{ApplicationContext.site.pages}" labelFunction="getPageLabel" />
 	
 	<s:HGroup width="100%">
 		<s:Spacer width="100%" />
-		
-		<s:Button label="Refresh" click="refresh()" />
 		
 		<s:Button label="New Page" click="newPage()" />
 		
 		<s:Button label="Edit Details" click="editPage()" enabled="{this.pageList.selectedIndex != -1}" />
 		
 		<s:Button label="Edit Content" click="editPageContent()" enabled="{this.pageList.selectedIndex != -1}" />
+		
+		<s:Button label="Preview" click="previewPage()" enabled="{this.pageList.selectedIndex != -1}" />
 		
 		<s:Button label="Clone" click="clonePage()" enabled="{this.pageList.selectedIndex != -1}" />
 	</s:HGroup>
