--- a/src/org/myjerry/myweb/views/ProjectView.mxml
+++ b/src/org/myjerry/myweb/views/ProjectView.mxml
@@ -49,12 +49,14 @@
 					this.language.selectedIndex = -1;
 					this.projectHost.selectedIndex = -1;
 					this.summary.text = '';
+					this.deprecated.selected = false;
 				} else {
 					this.projectName.text = this.currentlyLoadedProject.name;
 					this.description.text = this.currentlyLoadedProject.description;
 					this.language.selectedIndex = -1;
 					this.projectHost.selectedIndex = -1;
 					this.summary.text = this.currentlyLoadedProject.summary;
+					this.deprecated.selected = this.currentlyLoadedProject.deprecated;
 				}
 			}
 			
@@ -75,6 +77,7 @@
 				project.name = this.projectName.text;
 				project.description = this.description.text;
 				project.summary = this.summary.text;
+				project.deprecated = this.deprecated.selected;
 				
 				var rowID:Number = ApplicationContext.projectService.saveProject(project);
 				project.projectID = rowID;
@@ -121,6 +124,10 @@
 			
 			<s:FormItem label="Summary" >
 				<s:TextArea width="100%" height="100%" id="summary" />
+			</s:FormItem>
+			
+			<s:FormItem label="Deprecated">
+				<s:CheckBox id="deprecated" />
 			</s:FormItem>
 		</s:Form>
 		
